# deep-rubiks

./: .gitignore  README.md  docker-compose.yml
back/: Dockerfile.backend  app.py  pyproject.toml
back/app/: app.py  main.py  main_solveur.py
back/app/api/: main_router.py
back/app/api/routes/: cube.py
back/app/core/: colors.py  config.py  cube.py  face.py  moves.py
back/app/models/: colors.py  cube.py  faces.py  move_request.py  moves.py
back/app/solver/: LineWorld.py  artifacts.py  astar.py  config.py  cost_to_go_net.py  davi.py  env_adapter.py  evaluate.py  rubiks_cube_adapter.py  solveur.py  train.py  utils.py
back/models/: colors.py  cube.py  moves.py
back/output/: rubiks_cube_solver_small.pth
back/scripts/: dev.sh
ui/: .env  Dockerfile.frontend  package-lock.json  package.json
ui/public/: index.html  manifest.json
ui/src/: App.js  index.css
ui/src/api/: api_method.js  api_service.js
ui/src/components/: RubiksCube.js
ui/src/components/FunctionnalsButtons/: FunctionnalesButtons.jsx  FunctionnalsButtons.css
ui/src/components/MoveButtons/: MoveButtons.css  MoveButtons.jsx
ui/src/components/Rubiks/: OrbitControls.js  RubiksCube.css  RubiksCube.js  RubiksCube.jsx  useRubiksEngine.js
ui/src/components/Rubiks/engine/: colors.js  constants.js  engine.js  materials.js  roll.js
