[project]
name = "back"
version = "0.1.0"
description = ""
authors = [
    {name = "Theo",email = "thoecastillo@yahoo.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "uvloop (>=0.21.0,<0.22.0)",
    "fastapi (>=0.116.1,<0.117.0)"
]

[tool.poetry]
packages = [{include = "back", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
